# stock-crypto-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config-stocks.yaml  config-tastytrade.yaml  config-tastytrade.yaml.example  config.yaml  docker-compose.yml  pyproject.toml
docs/: improvement-plan.md
docs/plans/: 2026-02-26-trading-bot-design.md  2026-02-26-trading-bot.md
docs/superpowers/plans/: 2026-03-29-ml-signal-scorer.md  2026-03-30-telegram-notifications.md  2026-04-20-tastytrade-adapter.md  2026-04-29-overnight-catalyst.md
docs/superpowers/specs/: 2026-03-30-adaptive-strategy-design.md  2026-03-30-dynamic-symbol-universe-design.md  2026-04-20-tastytrade-adapter-design.md  2026-04-29-overnight-catalyst-design.md
models/: crypto.lgbm  stocks.lgbm
scripts/: fetch_training_data.py  train_model.py
src/trader/: __main__.py  config.py  models.py
tests/: test_config.py  test_config_telegram.py  test_models.py
tests/adapters/: test_alpaca.py  test_base.py  test_coinbase.py  test_tastytrade.py
tests/collectors/: test_coingecko.py  test_cryptopanic.py  test_feargreed.py  test_google_trends.py  test_overnight_catalyst.py  test_reddit.py  test_rss.py
tests/core/: test_backtest.py  test_backtest_enhanced.py  test_engine.py  test_engine_pdt.py  test_engine_telegram.py  test_pdt.py  test_risk.py  test_router.py  test_signals.py  test_sweep.py  test_time_gate.py  test_universe.py
tests/dashboard/: test_api.py
tests/llm/: test_advisor_pdt.py  test_sentiment.py
tests/ml/: test_features.py  test_predictor.py
tests/notifications/: test_telegram.py
tests/portfolio/: test_state.py
tests/strategies/: test_aggressive.py  test_conservative.py  test_moderate.py  test_registry.py
(+44 files in other folders)
