[project]
name = "trader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0",
    "pandas-ta>=0.3",
    "pandas>=2.0",
    "numpy>=1.26",
    "praw>=7.7",
    "requests>=2.31",
    "ollama>=0.1",
    "anthropic>=0.20",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
